--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
   <meta name="description"
     content="TaskFlow - Premium task manager with Google Sheets sync, streaks, and productivity tracking" />
   <meta name="theme-color" content="#0f0f1a" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+  <meta name="apple-mobile-web-app-title" content="TaskFlow" />
   <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
   <title>TaskFlow — Smart Task Manager</title>
 </head>
 
